fix: fixing spacings for notification container

--- a/src/components/custom/notification-bell/styles.css
+++ b/src/components/custom/notification-bell/styles.css
@@ -2,7 +2,7 @@
 @media screen and (max-width: 640px) {
   .nc-layout-wrapper {
     width: 85% !important;
-    margin-left: 30px !important;
+    margin-left: 35px !important;
   }
 }
 
